fix: responsive table getting too squashed

--- a/src/css/_table.css
+++ b/src/css/_table.css
@@ -16,6 +16,10 @@
 .table-responsive {
   overflow-x: auto;
   -webkit-overflow-scrolling: touch;
+
+  .table {
+    min-width: 960px;
+  }
 }
 
 tbody,
